# NeuMk18

./: .gitignore
Bootstrap/: CMakeLists.txt
Bootstrap/Builtins/: Array.h  Dictionary.h  Set.h
Bootstrap/Runtime/: AllOf.h  AnyOf.h  Assertions.h  Atomic.h  BitCast.h  CMakeLists.txt  CharacterTypes.h  Checked.h  CheckedFormatString.h  Concepts.h  Error.h  Find.h  Format.cpp  Format.h  Forward.h  Function.h  GenericLexer.cpp  GenericLexer.h  HashFunctions.h  HashMap.h  HashTable.h  IterationDecision.h  Iterator.h  LinearArray.h  MemMem.h  Memory.h  NonNullReferencePointer.h  Noncopyable.h  NonnullRefPtr.h  NumericLimits.h  Optional.h  Platform.h  RefCounted.h  RefPtr.h  ReferenceCounted.h  ReferencePointer.h  ReverseIterator.h  ScopeGuard.h  Span.h  StdLibExtraDetails.h  (+28 more)
Docs/: BUILD.md
